syntax = "proto3";

package calculator;

option go_package = "./calculatorpb";

import "google/api/annotations.proto";

service CalculatorService {
    rpc Sum(SumRequest) returns (SumResponse) {
        option (google.api.http) = {
            post: "/sum",
            body: "*",
        };
    }
    rpc PrimeNumberDecomposition(PNDRequest) returns (stream PNDResponse) {}
    rpc Average(stream AverageRequest) returns (AverageResponse) {}
    rpc FindMax(stream FindMaxRequest) returns (stream FindMaxResponse) {}
    rpc Sqrt(SqrtRequest) returns (SqrtResponse) {}
    rpc SumWithDeadline(SumRequest) returns (SumResponse) {}
}

message SumRequest {
    int32 num1 = 1;
    int32 num2 = 2;
}

message SumResponse {
    int32 result = 1;
}

message PNDRequest {
    int32 number = 1;
}

message PNDResponse {
    int32 result = 2;
}

message AverageRequest {
    float num = 1;
}

message AverageResponse {
    float result = 1;
}

message FindMaxRequest {
    int32 num = 1;
}

message FindMaxResponse {
    int32 max = 1;
}

message SqrtRequest {
    int32 num = 1;
}

message SqrtResponse {
    double result = 1;
}